fixed alignment issue

--- a/src/styles/scss/browse.module.scss
+++ b/src/styles/scss/browse.module.scss
@@ -54,17 +54,18 @@
     .checkbox_container {
       display: flex;
       flex-wrap: wrap;
-
+      //border: yellowgreen 3px solid;
+      padding: 0;
       div {
         //border: yellowgreen 3px solid;
         display: flex;
+        width: 150px;
         align-items: center;
-        justify-content: space-evenly;
-        margin-right: 20px;
+        margin-left: 0;
         input {
           height: 1.8rem;
           width: 1.8rem;
-          font-size: 2rem;
+          font-size: 1.6rem;
           border-radius: 10px;
         }
         label {
